<?xml version="1.0" encoding="utf-8"?>
<resources>
		<!-- Label for app name in launcher -->
		<!-- Edit these two strings to match your theme name -->
	<string name="app_name">YOUR ICONS NAME HERE</string>
	<string name="theme_name">Theme Name - YOUR ICONS NAME HERE</string>

		<!-- This link will appear at the end of the theme description -->
	<string name="app_link">https://play.google.com/store/apps/details?id=icons.the1dynasty.play.colors</string>
	
		<!-- This (optional) link will appear at the end of the theme description -->
	<string name="developer_link">https://play.google.com/store/apps/developer?id=the1dynasty</string>

		<!-- Dialogs and other Misc strings -->
		<!-- Edit these strings to match your own name and descriptions -->
	<string name="developer_name">the1dynasty</string>
	<string name="theme_description_app">"This is the description of your theme that shows up under the About Theme section of the app!"</string>
		<!-- This string shows up inside the setting to Apply the theme on Apex Launcher. I don't recommend changing it -->
	<string name="theme_description">"Open this theme from the app drawer to change wallpaper, find me on social sites, rate theme, or just to check out my other themes!"</string>
	<string name="theme_info">Thank YOU for your support!</string>
	<string name="dev_name">DEV NAME - the1dynasty</string>
	<string name="dev_description">Specializes in - Icon Packs, Theme Chooser, and UCCW Skins</string>
	<string name="dev_bio_title">MORE ABOUT the1dynasty</string>
	<string name="dev_bio">Born Roberto Mezquia Jr. Currently resides in Miami, FL. Sort of a jack-of-all traits. Automotive collision repair, trained. 
	    Business entrepreneur at heart. Started theming to get his phone exactly how he wanted it. Now spends more time doing it because he loves the creativity and challenges it brings.</string>
		
	<string name="finish_apply">Select your options and press Apply to finalize!</string>
	<string name="apex_market">Apex Launcher is not installed on your device. Redirecting to the Play Store!</string>
	<string name="nova_market">Nova Launcher is not installed on your device. Redirecting to the Play Store!</string>
	<string name="holo_market">Holo Launcher is not installed on your device. Redirecting to the Play Store!</string>
	<string name="adw_market">ADW Launcher is not installed on your device. Redirecting to the Play Store!</string>
	<string name="al_market">Action Launcher is not installed on your device. Redirecting to the Play Store!</string>
	<string name="go_market">AWESOME! Go Launcher is not installed on your device. Redirecting to Apex Launcher!</string>
	<string name="go_applied">Thanks for using YOUR ICONS NAME HERE. Your theme is being set!</string>
	<string name="next_market">Next Launcher is not installed on your device. Redirecting to the Play Store!</string>
	<string name="not_supported">Currently Not Supported. Please Apply through your launcher settings.</string>
	
	<string name="title_oss">One-Stop-Shop</string>
	<string name="title_new_icons">Newly Added</string>
	<string name="title_info">Theme Info</string>
	<string name="title_apply">Apply Theme</string>
	<string name="title_walls">Wallpapers</string>
	<string name="title_rate">Rate Theme</string>
	<string name="title_community">G+ Community</string>
	<string name="title_gplus">My Google+</string>
	<string name="title_share">Share Theme</string>
	<string name="title_email">Email Developer</string>
	<string name="title_about">About Developer</string>
	<string name="title_donate">Donate</string>
	
	<!-- Note: Try not to pass the length of the description or you will have text layout issues on the Cards -->
	<string name="desc_oss">All of my stuff in one place!</string>
	<string name="desc_new_icons">List of added icons over each update!</string>
	<string name="desc_info">Details and a preview of this theme</string>
	<string name="desc_apply">Choose from the launchers to apply the theme!</string>
	<string name="desc_walls">Choose from the included wallpapers</string>
	<string name="desc_rate">Rate this theme on the Play Store</string>
	<string name="desc_community">Join our Google+ Community to find and share your themes!</string>
	<string name="desc_gplus">Circle me on Google+</string>
	<string name="desc_share">Share this theme with others</string>
	<string name="desc_email">Send your requests or just give feedback</string>
	<string name="desc_about">Learn more about the developer</string>
	<string name="desc_donate">Consider donating to help contribute to future releases!</string>
	
	<string name="share_text">"ENTER YOUR TEXT HERE. https://play.google.com/store/apps/details?id=your.icons.name.here 
	    \n\n I PROMOTE MY APP HERE http://bit.ly/ZI34gC"</string>
	    
	<string name="email_subject">YOUR EMAIL SUBJECT</string>
	
	<string name="alert_start_title">You Are AWESOME!!!</string>
	<string name="alert_start_desc">You also have my One-Stop-Shop App installed. 
	    n\n\ Be sure to visit that app for more themes and other downloads!</string>
	<string name="error_start_title">Ohnoes!!!</string>
	<string name="error_start_desc">We have detected that you do not have my One-Stop-Shop App installed.
	    n\n\ Would you like to download it for FREE now?</string>
	    
		<!-- Misc strings-->
	<string name="content_description">Fish</string>
	<string name="back_button">Back</string>
	<string name="about_image_main">Main About Image</string>
	<string name="divider">Text Divider</string>
	<string name="later">Later</string>
	<string name="get">Get App</string>
	<string name="share">Share</string>
	<string name="ok">OK</string>
	<string name="close">Close</string>
	<string name="new_icons_title">Newly Added Icons</string>
	
	
		<!-- Labels for app icons -->
	<string name="about_dev">About Developer</string>
	<string name="about_theme">About Theme</string>
	<string name="donate">Donate</string>
	<string name="email_dev">Contact</string>
	<string name="googleme">Circle On Google+</string>
	<string name="icon_share">Share</string>
	<string name="more_dev">More From Developer</string>
	<string name="rateme">Rate</string>
	<string name="twitterme">Follow On Twitter</string>
	<string name="wall_picker">Wallpaper Picker</string>
	<string name="dynasty_app">the1dynasty OSS App</string>

		<!-- Wallpaper window -->
	<string name="wall_apply">Apply Wallpaper</string>
	
		<!-- Apex Previews -->
	<string name="theme_feature">theme_header</string>
  	<string name="theme_preview1">theme_preview1</string>
  	<string name="theme_preview2">theme_preview2</string>
 	<string name="theme_preview3">theme_preview3</string>
  	<string name="theme_preview4">theme_preview4</string>
  	<string name="theme_preview5">theme_preview5</string>
  	
		<!-- Apex Theme settings -->
	<bool name="config_apexskin">true</bool>
	<bool name="config_iconpack">true</bool>
  	
  		<!-- Alert Dialog strings -->
  	<string name="launcher_apex">Apex</string>
  	<string name="launcher_nova">Nova</string>
  	<string name="launcher_holo">Holo</string>
  	<string name="launcher_adw">ADW</string>
  	<string name="launcher_empty"></string>
  	<string name="launcher_al">Action</string>
  	<string name="launcher_title">Choose Your Launcher</string>
  	<string name="cancel">Cancel</string>
  	
  		<!-- Go Launcher stuff -->
  	<bool name="config_iconpack">true</bool>
	<bool name="enableIconPack">true</bool>
	<bool name="enableDockPack">false</bool>
	<string name="theme_title">THEME_NAME_HERE</string>
	
	
	
		<!-- Changelog Info -->
	<string name="changelog_title">Changelog</string>
	
	<string name="changelog_1">Version 1.0.0</string>
	<string name="changelog_2">Version 1.0.1</string>
	<string name="changelog_3">Version 1.1.0</string>
	<string name="changelog_4">Version 2.0.0</string>
	<string name="changelog_5">Version 2.1.1</string>
	<string name="changelog_6">Version 2.1.2</string>
	<string name="changelog_7">Version 2.2.0</string>
	
		<!-- NOTES 
			 \n = new line
		 	 &#8226; = bullets -->
	<string name="cl_list_1">&#8226; Initial Release</string>
	<string name="cl_list_2">&#8226; Fixed ADW and Nova intents
							\n&#8226; Fixed a lot of references for various layouts and colors
							\n&#8226; Other Misc things</string>
	<string name="cl_list_3">&#8226; File restructuring
							\n&#8226; Added Tablet Support
							\n&#8226; Changed code from ListView to GridView
							\n&#8226; Holo Light/Light ActionBar is the default instead of Holo Light/Dark ActionBar
							\n&#8226; Misc new images
							\n&#8226; Added Action Launcher to the Apply dialog</string>
	<string name="cl_list_4">&#8226; Removed hardcoded strings. Now better for translations.
							\n&#8226; Custom fonts can now be used throughout the app
							\n&#8226; Cleaned up folders/files/code
							\n&#8226; Changed "Apply" dialog to GridView
							\n&#8226; Added more "Apply" buttons (for future implementation)
							\n&#8226; Fixed Wallpaper section of app
							\n&#8226; Roboto-Thin is now the default font
							\n&#8226; Fixed scaling on top banner across all screen sizes</string>
	<string name="cl_list_5">&#8226; Added GlassActionBar to the template
							\n&#8226; Removed NOA dependency
							\n&#8226; Slightly tweaked layouts</string>
	<string name="cl_list_6">&#8226; Fixed Nova and Go Launcher
							\n&#8226; Added working Go Launcher "Apply" button</string>
	<string name="cl_list_7">&#8226; Added Changelog dialog on first run after install/update
							\n&#8226; NEW Section for showing off new icons
							\n&#8226; Overflow Menu added and some grid items moved to it</string>
		
		<!-- Dummy Content -->
	<string name="dummy_desc"></string>
	
</resources>