<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/content_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:scaleType="fitXY"
        android:src="@drawable/banner" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/banner_title_margin" >
		
	<View
		android:id="@+id/abNull"
		android:layout_width="match_parent"
		android:layout_height="@dimen/ab_height"
		android:background="@color/transparent"
		android:layout_weight="1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/tab_title"
        android:textSize="@dimen/banner_title"
		android:layout_weight="1" />
    
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_padding"
        android:text="@string/developer_name"
        android:textColor="@color/tab_desc"
        android:textSize="@dimen/banner_desc"
		android:layout_weight="1" />

    </LinearLayout>
</RelativeLayout>
