<?xml version="1.0" encoding="utf-8"?>

<!--
** Copyright 2013, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/app_bg" >
   
<RelativeLayout
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/about_dev_height"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/about_image_main"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_alignParentRight="true"
        android:src="@mipmap/about_pic" />

    <LinearLayout
        android:id="@+id/aboutBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:background="@color/transparent_black" >

    <TextView
        android:id="@+id/imageView2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/left_right_margin"
		android:layout_marginRight="@dimen/left_right_margin"
		android:layout_marginTop="@dimen/about_title_margin"
		android:layout_marginBottom="@dimen/about_title_margin"
        android:text="@string/about_dev"
        android:textColor="@color/white"
        android:textSize="@dimen/list_title_text" />
	</LinearLayout>
    </RelativeLayout>
    	<ScrollView
        	android:id="@+id/scrollView1"
        	android:layout_width="match_parent"
        	android:layout_height="0dp"
        	android:layout_weight="1" 
        	android:scrollbars="none">
        
    		<LinearLayout
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginLeft="@dimen/left_right_margin"
        		android:layout_marginRight="@dimen/left_right_margin"
        		android:orientation="vertical" >
        
            
	        		<TextView
	            		android:id="@+id/title1"
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
        				android:layout_marginLeft="@dimen/left_right_margin"
        				android:layout_marginRight="@dimen/left_right_margin"
        				android:layout_marginTop="@dimen/about_top_title_margin"
	            		android:layout_marginBottom="@dimen/left_right_margin"
	            		android:text="@string/dev_name"
	            		android:textSize="@dimen/list_title_text"
	            		android:textColor="@color/text_title" />
	        		
				    <ImageView
				        android:id="@+id/divider1"
        				android:contentDescription="@string/divider"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:src="@color/divider" />
	
	        		<TextView
	            		android:id="@+id/description1"
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
        				android:layout_marginLeft="@dimen/left_right_margin"
        				android:layout_marginRight="@dimen/left_right_margin"
	            		android:layout_marginTop="@dimen/about_top_desc_margin"
	            		android:layout_marginBottom="@dimen/list_padding"
			            android:text="@string/dev_description"
			            android:textSize="@dimen/list_desc_text"
			            android:textColor="@color/text_description" />
	        		
			        <TextView
	            		android:id="@+id/title2"
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
        				android:layout_marginLeft="@dimen/left_right_margin"
        				android:layout_marginRight="@dimen/left_right_margin"
        				android:layout_marginTop="@dimen/about_top_title_margin"
	            		android:layout_marginBottom="@dimen/left_right_margin"
	            		android:text="@string/dev_bio_title"
	            		android:textSize="@dimen/list_title_text"
	            		android:textColor="@color/text_title" />
			        
				    <ImageView
				        android:id="@+id/divider2"
        				android:contentDescription="@string/divider"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:src="@color/divider" />
			        
			        <TextView
	            		android:id="@+id/description2"
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
        				android:layout_marginLeft="@dimen/left_right_margin"
        				android:layout_marginRight="@dimen/left_right_margin"
	            		android:layout_marginTop="@dimen/about_top_desc_margin"
	            		android:layout_marginBottom="@dimen/list_padding"
			            android:text="@string/dev_bio"
			            android:textSize="@dimen/list_desc_text"
			            android:textColor="@color/text_description" />
				</LinearLayout>
    
		</ScrollView>
		
</LinearLayout>
	
    	
