<?xml version="1.0" encoding="utf-8"?>

<!--
** Copyright 2013, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <!-- Text description -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_right_margin"
        android:layout_marginRight="@dimen/left_right_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding"
            android:layout_marginLeft="@dimen/left_right_margin"
            android:layout_marginRight="@dimen/left_right_margin"
            android:layout_marginTop="@dimen/list_padding"
            android:text="@string/about_theme"
            android:textColor="@color/text_title"
            android:textSize="@dimen/list_title_text" />

        <ImageView
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/divider"
            android:src="@color/divider" />

        <TextView
            android:id="@+id/description1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding"
            android:layout_marginLeft="@dimen/left_right_margin"
            android:layout_marginRight="@dimen/left_right_margin"
            android:layout_marginTop="@dimen/left_right_margin"
            android:text="@string/theme_description_app"
            android:textColor="@color/text_description"
            android:textSize="@dimen/list_desc_text" />
    </LinearLayout>

    <!-- Middle section with images -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="3dp" >

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:contentDescription="@string/content_description"
            android:src="@drawable/anim_previous_pressed" />

        <ViewFlipper
            android:id="@+id/nowanim"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description"
                    android:scaleType="centerInside"
                    android:src="@drawable/theme_preview1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/theme_preview2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/theme_preview3" />
            </LinearLayout>
        </ViewFlipper>

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:contentDescription="@string/content_description"
            android:src="@drawable/anim_next_pressed" />
    </LinearLayout>

</LinearLayout>